Fix: Correção do menu sanduiche, correção do header do artigo com posicionamento do logo de forma padronizada. Atualização do z-index dos botões de ação do artigo, corrigida quebra de linha para url grande na lista de referencias do artigo

--- a/versions/1.0.0/src/common/scss/_components/_accessibility-bar.scss
+++ b/versions/1.0.0/src/common/scss/_components/_accessibility-bar.scss
@@ -757,7 +757,7 @@ body{
     right: 0.625rem !important;
     margin: 0 !important;
     overflow: visible;
-    z-index: 1050;
+    z-index: 999;
   }
 
   .btn.setAccessibility{
